--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,16 @@ license = "MIT OR Apache-2.0"
 log = "0.4"
 walkdir = "2.4"
 humantime = "2.1"
-dashmap = "5.4"
+dashmap = "6.1"
 
 [dependencies.env_logger]
 version = "0.10"
-default_features = false
+default-features = false
 features = ["humantime"]
 
 [dependencies.notify]
 version = "6.1"
-default_features = false
+default-features = false
 features = ["macos_fsevent"]
 
 [profile.release]
